--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -24,8 +24,8 @@
         <Button
             android:id="@+id/logo"
             android:background="@drawable/logo"
-            android:layout_width="300dp"
-            android:layout_height="92dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
 </RelativeLayout>
