--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:id="@+id/logo"
             android:background="@drawable/logo"
             android:layout_width="300dp"
-            android:layout_height="92dp"/>
+            android:layout_height="100dp"/>
 
         <Button
             android:id="@+id/btn_play"
@@ -46,7 +46,7 @@
             android:textColor="#ffffff"
             android:onClick="onClick"
             android:fontFamily="@font/font"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textAlignment="center"
             android:layout_marginBottom="15dp"
             android:text="@string/play" />
@@ -59,7 +59,7 @@
             android:textColor="#ffffff"
             android:onClick="onClick"
             android:fontFamily="@font/font"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textAlignment="center"
             android:layout_marginBottom="15dp"
             android:text="@string/options" />
@@ -72,7 +72,7 @@
             android:textColor="#ffffff"
             android:onClick="onClick"
             android:fontFamily="@font/font"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textAlignment="center"
             android:layout_marginBottom="15dp"
             android:text="@string/quit" />
@@ -125,6 +125,7 @@
 
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/adVieww"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
