--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -54,6 +54,7 @@
 
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/adVieww"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
